added two approximations for the unweighted log-rank tst, updated suggested packages

--- a/vignettes/example1.Rmd
+++ b/vignettes/example1.Rmd
@@ -20,7 +20,9 @@ We provide here code to replicate Figures 1C and 2 from Example 1 of our manuscr
 
 ```{r, message=FALSE, warning=FALSE}
 library(npsurvSS)
-library(tidyverse)
+library(dplyr)
+library(tidyr)
+library(tibble)
 library(ggplot2)
 ```
 
